[package]
name = "evm"
version = "0.39.1"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "SputnikVM - a Portable Blockchain Virtual Machine"
repository = "https://github.com/sorpaas/rust-evm"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
auto_impl = "1.0"
ethereum = { version = "0.14", default-features = false }
log = { version = "0.4", default-features = false }
primitive-types = { version = "0.12", default-features = false, features = ["rlp"] }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.10", default-features = false }

# Optional dependencies
environmental = { version = "1.1.2", default-features = false, optional = true }
scale-codec = { package = "parity-scale-codec", version = "3.2", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

evm-core = { version = "0.39", path = "core", default-features = false }
evm-gasometer = { version = "0.39", path = "gasometer", default-features = false }
evm-runtime = { version = "0.39", path = "runtime", default-features = false }

# for debug
hex = "0.4"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["std", "smallvec", "fmt", "ansi", "time", "json", "registry", "env-filter"] }
ethers-core = { version = "^2.0.0" }
tokio = {version = "1.32", features = ["full"]}
futures = "0.3.28"
# tokio-retry = "0.3"
# tokio-rustls = "0.23"
# tokio-util = "0.7.4"


[dev-dependencies]
criterion = "0.4"
hex = "0.4"

[[bench]]
name = "loop"
harness = false

[features]
default = ["std", "tracing"]
std = [
	"ethereum/std",
	"log/std",
	"primitive-types/std",
	"rlp/std",
	"sha3/std",
	"environmental/std",
	"scale-codec/std",
	"scale-info/std",
	"serde/std",
	"evm-core/std",
	"evm-gasometer/std",
	"evm-runtime/std",
]
with-codec = [
	"scale-codec",
	"scale-info",
	"primitive-types/codec",
	"primitive-types/scale-info",
	"ethereum/with-codec",
	"evm-core/with-codec",
]
with-serde = [
	"serde",
	"primitive-types/impl-serde",
	"evm-core/with-serde",
	"ethereum/with-serde",
]
tracing = [
	"environmental",
	"evm-gasometer/tracing",
	"evm-runtime/tracing",
]

[workspace]
members = [
	"core",
	"gasometer",
	"runtime",
	"fuzzer",
]
